<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/dishImage"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitStart"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/dishImage" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/product_name" />

        <ImageView
            android:id="@+id/ranking"
            android:layout_width="25dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_ranking"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/product_brand"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/product_nutriscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/nutriscore"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/ranking"
            app:layout_constraintTop_toBottomOf="@id/product_brand"
            app:layout_constraintBottom_toBottomOf="parent" />


        <ImageView
            android:id="@+id/calories"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_calories"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/product_nutriscore"
            app:layout_constraintTop_toBottomOf="@id/product_brand"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/product_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/calories_per_portion"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/calories"
            app:layout_constraintTop_toBottomOf="@id/product_brand"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <ImageView
            android:layout_width="18dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_nav_bar_bookmarks"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@id/product_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>